# simple_cloudflare_ddns

./: .gitignore  Cargo.toml  README.md  ddns-updater.service
src/: main.rs
